# oai-agents

./: .gitignore  README.md  cmd.sh  docker-compose.yml  pyproject.toml
app/: clients.py  config.py  log.py  main.py  models.py
app/agents/: __init__.py  supervisor.py
app/agents/history/: __init__.py  agent.py
app/agents/todos/: __init__.py  agent.py
app/agents/todos/tools/: __init__.py  models.py  tools.py
